# ODFAEG-2

./: .gitignore  README.md  application.html  composantsrendus.html  extressources.html  installation.html  mypersonnalkey.pub  readme.txt~
Demos/ODFAEG-3DDEMO/: application.cpp  application.h  main.cpp
Demos/ODFAEG-3DDEMO/tilesets/mesh_puddingmill/: puddingmill.mtl
Demos/ODFAEG-3DDEMO/tilesets/mesh_puddingmill_wings/: puddingmill wings.mtl
Demos/ODFAEG-CLIENT/: application.cpp  application.h  caracter.cpp  caracter.h  gameAction.cpp  gameAction.hpp  hero.cpp  hero.h  item.cpp  item.hpp  itemAction.cpp  main.cpp  monster.cpp  monster.h  pnj.cpp  pnj.hpp  quest.cpp  quest.hpp  skill.cpp  skill.hpp  skillAction.cpp  skillAction.hpp
Demos/ODFAEG-DEMO/: application.cpp  application.h  caracter.cpp  caracter.h  ecsapplication.cpp  ecsapplication.hpp  function.h  hero.cpp  hero.hpp  main.cpp  stb_image.h
Demos/ODFAEG-SERVER/: application.cpp  application.h  caracter.cpp  caracter.h  equipment.cpp  equipment.hpp  hero.cpp  hero.h  item.cpp  item.hpp  main.cpp  monster.cpp  monster.h  pnj.cpp  pnj.hpp  quest.cpp  skill.cpp  skill.hpp
Demos/ODFAEGCREATOR/: a-main.cpp.005t.original  application.cpp  application.cpp.save-failed  application.hpp  main.cpp  odfaegCreatorStateExecutor.cpp  rectangularSelection.cpp  rectangularSelection.hpp
Demos/ODFAEGDemoECS/: application.cpp  application.hpp  main.cpp
ODFAEG/: CMakeLists.txt  compile_commands.json  license.txt~
ODFAEG-windows/: CMakeLists.txt~
ODFAEG-windows/Demos/ODFAEG-3DDEMO/: application.h
ODFAEG-windows/Demos/ODFAEG-CLIENT/: application.h  caracter.cpp  gameAction.cpp  gameAction.hpp  hero.cpp  item.cpp  item.hpp  main.cpp  quest.cpp
ODFAEG-windows/Demos/ODFAEG-DEMO/: application.cpp  application.h  caracter.cpp  delegate.h
ODFAEG-windows/Demos/ODFAEG-SERVER/: application.h  caracter.cpp  hero.cpp  hero.h  quest.hpp
ODFAEG-windows/Demos/ODFAEGCREATOR/: application.cpp  application.hpp  rectangularSelection.hpp
ODFAEG-windows/ODFAEG/: CMakeLists.txt  license.txt
ODFAEG-windows/ODFAEG/cmake/: Macros.cmake
ODFAEG-windows/ODFAEG/cmake/Modules/: FindSFML.cmake~
ODFAEG-windows/ODFAEG/src/odfaeg/: CMakeLists.txt
ODFAEG-windows/cwc/: Build.cwc
ODFAEG-windows/cwcODFAEGDEMO/: Build.cwc
ODFAEG-windows/cwcODFAEGSERVER/: Build.cwc
ODFAEG-windows/temp/RemoveForWindowsBuild/: iKeyboard.cpp
ODFAEG-windows/temp/RemoveForWindowsBuild/Network/: CMakeLists.txt  aes.cpp  encryptedPacket.cpp  rsa.cpp~
ODFAEG/cmake/Modules/: FindODFAEG.cmake  FindSFML.cmake
ODFAEG/extlibs/headers/cppcms/: config.h
ODFAEG/extlibs/headers/openssl/: asn1.h  configuration.h  ssl.h  x509.h
ODFAEG/extlibs/libs-msvc/x64/: freetype.lib  sfml-audio.lib  sfml-graphics.lib  sfml-window.lib
ODFAEG/include/odfaeg/: config.hpp
ODFAEG/include/odfaeg/Audio/: player.h  stream.h
ODFAEG/include/odfaeg/BoundingAreas/: axisAlignedBoundingBox.h  axisAlignedBoundingBox.h.cbTemp  boundingAreas.h  boundingCircle.h  boundingEllipse.h  boundingPolygon.h  boundingPolygon.h.cbTemp  boundingRectangle.h  orientedBoundingBox.h  orientedBoundingRect.h  segment.h
ODFAEG/include/odfaeg/Core/: UpsFileManager.h  UpsFileManager.h.cbTemp  action.h  actionMap.h  actionMap.inl  actionMap.tpp  actionMap.tpp~  any.h  application.h  archive.h  archive.h.save-failed  bind.h  callback.h  class.hpp  clock.h  command.h  compile_time_counter.hpp  constructor.hpp  crtp.hpp  dynamicTuple.hpp  ecs.hpp  ecs.hpp.save-failed  entitiesUpdater.h  entityFactory.hpp  entityManager.h  entitySystem.h  (+24 more)
ODFAEG/src/odfaeg/: CMakeLists.txt~
ODFAEG/src/odfaeg/Graphics/: CMakeLists.txt  CMakeLists.txt~  GlContext.cpp  GlContext.cpp~  GlContext.hpp  GlDebug.cpp  GlDebug.hpp  VideoModeImpl.hpp  Window.cpp  WindowImpl.cpp  WindowImpl.cpp~  WindowImpl.hpp  animatedEntity.cpp  animation.cpp  baseChangementMatrix.cpp  batcher.cpp  billBoard.cpp  boneAnimation.cpp  bspTree.cpp  cellMap.cpp  component.cpp  convexShape.cpp  depthPeelingRendercomponent.cpp  drawable.cpp  entity.cpp  font.cpp  gameObject.cpp  glCheck.cpp  glCheck.cpp~  glCheck.h  glCheck.h~  glContext.h  gridMap.cpp  heavyComponent.cpp  lightRenderComponent.cpp  map.cpp  mesh.cpp  model.cpp  perPixelLinkedListRenderComponent.cpp  projMatrix.cpp  (+35 more)
ODFAEG/src/odfaeg/Graphics/2D/: decor.cpp  directionnalLight.cpp  ponctualLight.cpp  tGround.cpp~  wall.cpp
ODFAEG/src/odfaeg/Graphics/3D/: cube.cpp  entity.cpp  glCheck.h~  model.cpp  textureSaver.h~
ODFAEG/src/odfaeg/Graphics/ECS/: animationUpdater.cpp  application.cpp  cell.cpp  component.cpp  grid.cpp  perPixelLinkedList.cpp  scene.cpp  system.cpp
ODFAEG/src/odfaeg/Graphics/GUI/: checkBox.cpp  dropDownList.cpp  filedialog.cpp  label.cpp  menu.cpp  menuItem.cpp  node.cpp  panel.cpp  passwordField.cpp  tabPane.cpp  textArea.cpp
ODFAEG/src/odfaeg/Graphics/Vulkan/: device.cpp  instance.cpp  swapchain.cpp  vulkan_window.cpp
ODFAEG/src/odfaeg/Graphics/Win32/: JoystickImpl.cpp  JoystickImpl.hpp  VideoModeImpl.cpp  WglContext.cpp  WglContext.hpp  WindowImplWin32.cpp  WindowImplWin32.hpp
ODFAEG/src/odfaeg/Window/: CMakeLists.txt  actions.cpp  command.cpp  context.cpp  contextFactory.cpp  contextImpl.cpp  glResource.cpp  glxContext.cpp  iKeyboard.cpp  iMouse.cpp  sfmlContextImpl.cpp  vkDebug.cpp  vkSettup.cpp  wglContext.cpp  wglExtensions.cpp  win32Keyboard.cpp  win32Mouse.cpp  win32Window.cpp  window.cpp  windowFactory.cpp  windowImpl.cpp  x11Window.cpp
ODFAEG/src/odfaeg/Window/GLFW/: vkGLFWWindow.cpp
ODFAEG/src/odfaeg/Window/Linux/: glxContext.cpp  x11Keyboard.cpp  x11Mouse.cpp  x11Window.cpp
ODFAEG/src/odfaeg/Window/SFML/: sfmlContextImpl.cpp  sfmlKeyboard.cpp  sfmlMouse.cpp  sfmlWindowImpl.cpp
ODFAEG/src/odfaeg/Window/Windows/: wglContext.cpp  wglExtensions.cpp  win32Keyboard.cpp  win32Mouse.cpp  win32Window.cpp
cwc/: Build.cwc
cwcODFAEG3DDEMO/: Build.cwc
cwcODFAEGCLIENT/: Build.cwc
cwcODFAEGCREATOR/: Build.cwc
cwcODFAEGDEMO/: Build.cwc
cwcODFAEGSERVER/: Build.cwc
temp/RemoveForWindowsBuild/Network/: aes.cpp~  rsa.cpp  symEncPacket.cpp  symEncr.cpp
(+352 files in other folders)
